[ADD] ADTs and Initial classes (entity, item, player, weapon)

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ MauasaKataiRPG_Bot/.env
 MauasaKataiRPG_API/.env
 MauasaKataiRPG_Bot/build/*
 MauasaKataiRPG_Bot/build/MauasaKataiRPG
+MauasaKataiRPG_Bot/core
